...
        if isLastQuestion() {
            statisticService.store(correct: correctAnswers, total: questionsAmount)

            let resultMessage = makeResultMessage()

            let viewModel = QuizResultsViewModel(
                title: "Этот раунд окончен!",
                text: resultMessage,
                buttonText: "Сыграть ещё раз"
            )

            viewInput?.show(quiz: viewModel)
        } else {
...
